fix size and alignment of button

--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,8 @@ button,
 
     font-size: 20px;
     transition: opacity .8s , color .8s;
+    display:inline-block;
+
 }
 
 button:hover,
