--- a/css/style.production.css
+++ b/css/style.production.css
@@ -77,6 +77,8 @@ button{
     font-size: 20px;
     -webkit-transition: opacity .8s , color .8s;
     transition: opacity .8s , color .8s;
+    display:inline-block;
+
 }
 
 .button{
@@ -99,6 +101,8 @@ button{
     font-size: 20px;
     -webkit-transition: opacity .8s , color .8s;
     transition: opacity .8s , color .8s;
+    display:inline-block;
+
 }
 
 button:hover {
